--- a/css/resume.css
+++ b/css/resume.css
@@ -70,8 +70,8 @@ h2 {
 }
 
 .list-icons .list-inline-item i:hover {
-  /*color: #38a0bd;*/
-  color: #2D7F95;
+  color: #38a0bd;
+  /* color: #2D7F95; */
 }
 
 
